--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conecta - Ecossistema de Inovação Pinhais</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../style/global.css">
+    <link rel="stylesheet" href="style/global.css">
 </head>
 <body>
-    <header class="bg-white text-dark p-3">
+    <header>
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-white">
                 <a class="navbar-brand" style="color: rgba(66, 107, 31, 1);" href="home.html">LOGO CONECTA</a>
@@ -30,7 +30,7 @@
                             <a class="nav-link text-dark" href="#">Artigos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="login.html" style="padding-right: 26px; padding-left: 26px; border-radius: 8px;background-color: rgba(66, 107, 31, 1); font-size: 16px; color: rgba(255, 255, 255, 1);">Login</a>
+                            <a class="nav-link" href="layout/login.html" style="padding-right: 26px; padding-left: 26px; border-radius: 8px;background-color: rgba(66, 107, 31, 1); font-size: 16px; color: rgba(255, 255, 255, 1);">Login</a>
                         </li>
                     </ul>
                 </div>
@@ -38,25 +38,31 @@
         </div>
     </header>
 
+    <!-- <section class="container">
+        <div class="justify-content-end d-flex">
+            <form class="search-bar">
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Digite sua pesquisa...">
+                    <button class="btn btn-primary" type="submit">Buscar</button>
+                </div>
+            </form>
+        </div> -->
+    </section>
+
     <section class="container">
         <div class="hero-section">
-            <div class="hero-content">
+            <!-- <div class="hero-content">
                 <h1 class="hero-title">Bem-vindo ao Nosso Site</h1>
-                <form class="search-bar">
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Digite sua pesquisa...">
-                        <button class="btn btn-primary" type="submit">Buscar</button>
-                    </div>
-                </form>
-            </div>
+                
+            </div> -->
         </div>
     </section>
 
     <section class="container my-5">
         <div class="menu-bar">
             <a class="menu-option" id="checked">HOME</a>
-            <a href="noticias.html" class="menu-option">NOTÍCIAS</a>
-            <a href="quem-somos.html" class="menu-option">QUEM SOMOS</a>
+            <a href="layout/noticias.html" class="menu-option">NOTÍCIAS</a>
+            <a href="layout/quem-somos.html" class="menu-option">QUEM SOMOS</a>
         </div>
     </section>
 
