--- a/front/artigo.html
+++ b/front/artigo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Conecta</title>
+    <title>Detalhes do Artigo - Conecta</title>
     <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style/global.css">
@@ -40,31 +40,15 @@
         </header>
 
         <section class="container my-5">
-            <h2 class="text-center mb-4">Cadastre-se</h2>
-            <div class="row justify-content-center">
-                <div class="col-md-6">
-                    <form action="http://localhost:3000/usuarios" method="POST">
-                        <div class="mb-3">
-                            <label for="nome" class="form-label">Nome:</label>
-                            <input type="text" id="nome" name="nome" class="form-control" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="email" class="form-label">Email:</label>
-                            <input type="email" id="email" name="email" class="form-control" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="senha" class="form-label">Senha:</label>
-                            <input type="password" id="senha" name="senha" class="form-control" required>
-                        </div>
-
-                        <button type="submit" class="btn btn-primary w-100">Cadastrar</button>
-                    </form>
-
-                    <div class="text-center mt-3">
-                        <p>Já possui uma conta? <a href="login.html">Login</a></p>
-                    </div>
-                </div>
+            <div class="menu-bar">
+                <a href="index.html" class="menu-option">HOME</a>
+                <a href="artigos.html" class="menu-option">ARTIGOS</a>
+                <a href="quem-somos.html" class="menu-option">QUEM SOMOS</a>
             </div>
+        </section>
+
+        <section class="container my-5">
+            <div id="artigo-detail"></div>
         </section>
     </div>
 
@@ -80,6 +64,30 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        const params = new URLSearchParams(window.location.search);
+        const artigoId = params.get('id');
+
+        // Função para buscar os detalhes do artigo
+        async function fetchArtigo() {
+            try {
+                const response = await fetch(`/artigos/${artigoId}`); // Altere para seu endpoint
+                if (!response.ok) throw new Error('Erro ao buscar o artigo.');
+                const artigo = await response.json();
+
+                // Renderizar os detalhes do artigo
+                const artigoDetail = document.getElementById('artigo-detail');
+                artigoDetail.innerHTML = `
+                    <h2>${artigo.titulo}</h2>
+                    <p><strong>Categoria:</strong> ${artigo.categoria}</p>
+                    <p>${artigo.conteudo}</p>
+                `;
+            } catch (error) {
+                console.error(error);
+            }
+        }
+
+        fetchArtigo();
+    </script>
 </body>
 </html>
