--- a/front/index.html
+++ b/front/index.html
@@ -59,8 +59,8 @@
       
 
         <section class="container my-5">
-            <div class="row">
-                <div class="col-lg-6 mb-4">
+            <div class="row" id="article-container">
+                <!-- <div class="col-lg-6 mb-4">
                     <div class="card featured">
                         <img src="./img/conecta-pinhais-promove-encontro-aberto-sobre-inovacao-e-impulsiona-ideias-667a01dfa3efe.jpg" alt="Imagem em Destaque">
                         <div class="text-overlay">
@@ -148,14 +148,14 @@
                             <h5 class="card-title">Título da Notícia 5</h5>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
 
-            <div class="row text-center m-5" style="    font-size: 25px;">
+            <div class="row text-center m-5" style="font-size: 25px;">
                 <p>Carregar mais
                     <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-arrow-down" viewBox="0 0 16 16">
-  <path fill-rule="evenodd" d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1"/>
-</svg>
+                        <path fill-rule="evenodd" d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1"/>
+                    </svg>
                 </p>
             </div>
         </section>
@@ -174,5 +174,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/artigos.js"></script>
 </body>
 </html>
