--- a/front/noticias.html
+++ b/front/noticias.html
@@ -49,172 +49,7 @@
 
         <section class="container my-5">
             <h2 class="text-center mb-4">Artigos</h2>
-            <div class="row">
-                <div class="col-lg-3 col-md-6 mb-4">
-                    <div class="card news-card">
-                        <img src="./img/img2.jpeg" alt="Imagem Notícia 3">
-                        <div class="card-body">
-                            <p class="category">Turismo</p>
-                            <h5 class="card-title">Título da Notícia 3</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 mb-4">
-                    <div class="card news-card">
-                        <img src="./img/img3.jpeg" alt="Imagem Notícia 4">
-                        <div class="card-body">
-                            <p class="category">Esportes</p>
-                            <h5 class="card-title">Título da Notícia 4</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 mb-4">
-                    <div class="card news-card">
-                        <img src="./img/img4.jpeg" alt="Imagem Notícia 5">
-                        <div class="card-body">
-                            <p class="category">Economia</p>
-                            <h5 class="card-title">Título da Notícia 5</h5>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-6 mb-4">
-                    <div class="card news-card">
-                        <img src="./img/img2.jpeg" alt="Imagem Notícia 3">
-                        <div class="card-body">
-                            <p class="category">Turismo</p>
-                            <h5 class="card-title">Título da Notícia 3</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 mb-4">
-                    <div class="card news-card">
-                        <img src="./img/img3.jpeg" alt="Imagem Notícia 4">
-                        <div class="card-body">
-                            <p class="category">Esportes</p>
-                            <h5 class="card-title">Título da Notícia 4</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 mb-4">
-                    <div class="card news-card">
-                        <img src="./img/img4.jpeg" alt="Imagem Notícia 5">
-                        <div class="card-body">
-                            <p class="category">Economia</p>
-                            <h5 class="card-title">Título da Notícia 5</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 mb-4">
-                    <div class="card news-card">
-                        <img src="./img/img2.jpeg" alt="Imagem Notícia 3">
-                        <div class="card-body">
-                            <p class="category">Turismo</p>
-                            <h5 class="card-title">Título da Notícia 3</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 mb-4">
-                    <div class="card news-card">
-                        <img src="./img/img3.jpeg" alt="Imagem Notícia 4">
-                        <div class="card-body">
-                            <p class="category">Esportes</p>
-                            <h5 class="card-title">Título da Notícia 4</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 mb-4">
-                    <div class="card news-card">
-                        <img src="./img/img4.jpeg" alt="Imagem Notícia 5">
-                        <div class="card-body">
-                            <p class="category">Economia</p>
-                            <h5 class="card-title">Título da Notícia 5</h5>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-6 mb-4">
-                    <div class="card news-card">
-                        <img src="./img/img2.jpeg" alt="Imagem Notícia 3">
-                        <div class="card-body">
-                            <p class="category">Turismo</p>
-                            <h5 class="card-title">Título da Notícia 3</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 mb-4">
-                    <div class="card news-card">
-                        <img src="./img/img3.jpeg" alt="Imagem Notícia 4">
-                        <div class="card-body">
-                            <p class="category">Esportes</p>
-                            <h5 class="card-title">Título da Notícia 4</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 mb-4">
-                    <div class="card news-card">
-                        <img src="./img/img4.jpeg" alt="Imagem Notícia 5">
-                        <div class="card-body">
-                            <p class="category">Economia</p>
-                            <h5 class="card-title">Título da Notícia 5</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 mb-4">
-                    <div class="card news-card">
-                        <img src="./img/img2.jpeg" alt="Imagem Notícia 3">
-                        <div class="card-body">
-                            <p class="category">Turismo</p>
-                            <h5 class="card-title">Título da Notícia 3</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 mb-4">
-                    <div class="card news-card">
-                        <img src="./img/img3.jpeg" alt="Imagem Notícia 4">
-                        <div class="card-body">
-                            <p class="category">Esportes</p>
-                            <h5 class="card-title">Título da Notícia 4</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 mb-4">
-                    <div class="card news-card">
-                        <img src="./img/img4.jpeg" alt="Imagem Notícia 5">
-                        <div class="card-body">
-                            <p class="category">Economia</p>
-                            <h5 class="card-title">Título da Notícia 5</h5>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-6 mb-4">
-                    <div class="card news-card">
-                        <img src="./img/img2.jpeg" alt="Imagem Notícia 3">
-                        <div class="card-body">
-                            <p class="category">Turismo</p>
-                            <h5 class="card-title">Título da Notícia 3</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 mb-4">
-                    <div class="card news-card">
-                        <img src="./img/img3.jpeg" alt="Imagem Notícia 4">
-                        <div class="card-body">
-                            <p class="category">Esportes</p>
-                            <h5 class="card-title">Título da Notícia 4</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 mb-4">
-                    <div class="card news-card">
-                        <img src="./img/img4.jpeg" alt="Imagem Notícia 5">
-                        <div class="card-body">
-                            <p class="category">Economia</p>
-                            <h5 class="card-title">Título da Notícia 5</h5>
-                        </div>
-                    </div>
-                </div>
+            <div class="row" id="article-container">
             </div>
         </section>
 
@@ -233,5 +68,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/artigos_todos.js"></script>
 </body>
 </html>
