--- a/front/registro.html
+++ b/front/registro.html
@@ -43,7 +43,7 @@
             <h2 class="text-center mb-4">Cadastre-se</h2>
             <div class="row justify-content-center">
                 <div class="col-md-6">
-                    <form action="http://localhost:3000/usuarios" method="POST">
+                    <form action="/usuarios" method="POST">
                         <div class="mb-3">
                             <label for="nome" class="form-label">Nome:</label>
                             <input type="text" id="nome" name="nome" class="form-control" required>
