--- a/front/login.html
+++ b/front/login.html
@@ -44,7 +44,7 @@
             <div class="row justify-content-center">
                 <div class="col-md-6">
                     <!-- Formulário de Login -->
-                    <form action="http://localhost:3000/login" method="POST" id="loginForm">
+                    <form action="/login" method="POST" id="loginForm">
                         <div class="mb-3">
                             <label for="email" class="form-label">Email:</label>
                             <input type="email" id="email" name="email" class="form-control" required>
@@ -88,7 +88,7 @@
             const email = document.getElementById('email').value;
             const senha = document.getElementById('senha').value;
 
-            fetch('http://localhost:3000/login', {
+            fetch('/login', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
