--- a/front/quem-somos.html
+++ b/front/quem-somos.html
@@ -55,6 +55,12 @@
             <p>Com eventos como o <strong>Encontro Aberto</strong>, trabalhamos para estimular a colaboração entre empresários, especialistas e autoridades, criando um ambiente favorável para o surgimento de soluções criativas e tecnológicas que respondam aos desafios da sociedade. Nosso compromisso é construir um futuro mais inovador e sustentável para Pinhais, impulsionando o crescimento econômico e social.</p>
             <p>Venha fazer parte dessa jornada conosco e ajude a moldar o futuro da inovação em nossa cidade.</p>
         </section>
+
+        <section class="container mb-5">
+            <div class="col-12">
+                <img src="img/quem-somos.jpeg" alt="">
+            </div>
+        </section>
     </div>
 
     <footer class="bg-dark text-white text-center">
