--- a/front/registro.html
+++ b/front/registro.html
@@ -43,7 +43,7 @@
             <h2 class="text-center mb-4">Cadastre-se</h2>
             <div class="row justify-content-center">
                 <div class="col-md-6">
-                    <form action="/usuarios" method="POST">
+                    <form action="/usuarios" method="POST" id="cadastroForm">
                         <div class="mb-3">
                             <label for="nome" class="form-label">Nome:</label>
                             <input type="text" id="nome" name="nome" class="form-control" required>
@@ -81,5 +81,59 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script>
+        // Evento de submit do formulário
+        document.getElementById('cadastroForm').addEventListener('submit', function(event) {
+            event.preventDefault(); // Previne o envio padrão do formulário
+
+            const nome = document.getElementById('nome').value;
+            const email = document.getElementById('email').value;
+            const senha = document.getElementById('senha').value;
+
+            fetch('/usuarios', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({ nome, email, senha })
+            })
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Erro ao fazer cadastro');
+                }
+                console.log(response, 'response')
+                return response; // Retorna o JSON que contém o token
+            })
+            .then(data => {
+                    fetch('/login', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({ email, senha })
+                    })
+                    .then(response => {
+                        if (!response.ok) {
+                            throw new Error('Erro ao fazer login');
+                        }
+                        return response.json(); // Retorna o JSON que contém o token
+                    })
+                    .then(data => {
+                    
+                        // Armazena o token no localStorage
+                        localStorage.setItem('token', data.token);
+                        window.location.href = 'artigos.html'; // Redireciona para a página de artigos
+                    })
+                    .catch(error => {
+                        alert('Erro: ' + error.message);
+                    });
+            })
+            .catch(error => {
+                console.log(error)
+                alert('Erro: ' + error.message);
+            });
+        });
+    </script>
 </body>
 </html>
