--- a/front/artigos.html
+++ b/front/artigos.html
@@ -37,7 +37,7 @@
                                 <a class="nav-link" href="#">Colaboradores</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="login.html" style="padding-right: 26px; padding-left: 26px; border-radius: 8px;background-color: #4177ff; border: 1px solid #4177ff;">Login</a>
+                                <a class="nav-link" id="authLink" href="login.html" style="padding-right: 26px; padding-left: 26px; border-radius: 8px;background-color: #4177ff; border: 1px solid #4177ff;">Login</a>
                             </li>
                         </ul>
                     </div>
@@ -47,7 +47,7 @@
 
         <section class="container my-5">
             <div class="menu-bar">
-                <a class="menu-option" id="checked">HOME</a>
+                <a href="index.html" class="menu-option">HOME</a>
                 <a href="noticias.html" class="menu-option">ARTIGOS</a>
                 <a href="quem-somos.html" class="menu-option">QUEM SOMOS</a>
             </div>
@@ -96,7 +96,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <script>
-        // Função para buscar e listar os artigos
         function loadArticles() {
             fetch('/artigos')
                 .then(response => response.json())
@@ -146,14 +145,13 @@
                 });
         }
 
-        // Função para carregar um artigo para edição
         function loadArticleForEdit(article) {
             document.getElementById('articleId').value = article.id;
             document.getElementById('titulo').value = article.titulo;
             document.getElementById('conteudo').value = article.conteudo;
         }
         console.log(localStorage.getItem('token'))
-        // Função para excluir um artigo
+
         function deleteArticle(id) {
             if (confirm('Você tem certeza que deseja excluir este artigo?')) {
                 fetch(`/artigos/${id}`, {
@@ -177,9 +175,8 @@
             }
         }
 
-        // Evento de submit do formulário
         document.getElementById('articleForm').addEventListener('submit', function(event) {
-            event.preventDefault(); // Previne o envio padrão do formulário
+            event.preventDefault();
 
             const id = document.getElementById('articleId').value;
             const titulo = document.getElementById('titulo').value;
@@ -203,7 +200,7 @@
                 } else {
                     alert(data.message);
                     loadArticles();
-                    document.getElementById('articleForm').reset(); // Limpa o formulário
+                    document.getElementById('articleForm').reset();
                 }
             })
             .catch(error => {
@@ -211,8 +208,35 @@
             });
         });
 
-        // Carrega os artigos ao carregar a página
         document.addEventListener('DOMContentLoaded', loadArticles);
+    </script>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const authLink = document.getElementById('authLink');
+            const navbar = document.querySelector('.navbar-nav');
+            const token = localStorage.getItem('token');
+
+            if (token) {
+                authLink.textContent = 'Sair';
+                authLink.href = '#';
+                authLink.style.backgroundColor = '#ff4d4d';
+                authLink.addEventListener('click', function(event) {
+                    event.preventDefault();
+                    localStorage.removeItem('token');
+                    window.location.href = 'index.html';
+                });
+
+                const addArticleItem = document.createElement('li');
+                addArticleItem.classList.add('nav-item');
+                addArticleItem.innerHTML = `
+                    <a class="nav-link" href="artigos.html" style="padding-right: 26px; padding-left: 26px; border-radius: 8px; background-color: #28a745; border: 1px solid #28a745;">Adicionar artigo</a>
+                `;
+                navbar.appendChild(addArticleItem);
+            } else {
+                window.location.href = 'index.html';
+            }
+        });
     </script>
 </body>
 </html>
