--- a/front/login.html
+++ b/front/login.html
@@ -31,7 +31,7 @@
                                 <a class="nav-link" href="#">Colaboradores</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="login.html" style="padding-right: 26px; padding-left: 26px; border-radius: 8px;background-color: #4177ff; border: 1px solid #4177ff;">Login</a>
+                                <a class="nav-link" id="authLink" href="login.html" style="padding-right: 26px; padding-left: 26px; border-radius: 8px;background-color: #4177ff; border: 1px solid #4177ff;">Login</a>
                             </li>
                         </ul>
                     </div>
@@ -43,7 +43,6 @@
             <h2 class="text-center mb-4">Login</h2>
             <div class="row justify-content-center">
                 <div class="col-md-6">
-                    <!-- Formulário de Login -->
                     <form action="/login" method="POST" id="loginForm">
                         <div class="mb-3">
                             <label for="email" class="form-label">Email:</label>
@@ -57,7 +56,6 @@
                         <button type="submit" class="btn btn-primary w-100">Login</button>
                     </form>
 
-                    <!-- Link para cadastro -->
                     <div class="text-center mt-3">
                         <p>Não tem uma conta? <a href="registro.html">Cadastre-se</a></p>
                     </div>
@@ -81,9 +79,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <script>
-        // Evento de submit do formulário
         document.getElementById('loginForm').addEventListener('submit', function(event) {
-            event.preventDefault(); // Previne o envio padrão do formulário
+            event.preventDefault();
 
             const email = document.getElementById('email').value;
             const senha = document.getElementById('senha').value;
@@ -99,17 +96,42 @@
                 if (!response.ok) {
                     throw new Error('Erro ao fazer login');
                 }
-                return response.json(); // Retorna o JSON que contém o token
+                return response.json();
             })
             .then(data => {
-            
-                // Armazena o token no localStorage
+        
                 localStorage.setItem('token', data.token);
-                window.location.href = 'artigos.html'; // Redireciona para a página de artigos
+                window.location.href = 'index.html';
             })
             .catch(error => {
                 alert('Erro: ' + error.message);
             });
+        });
+    </script>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const authLink = document.getElementById('authLink');
+            const navbar = document.querySelector('.navbar-nav');
+            const token = localStorage.getItem('token');
+
+            if (token) {
+                authLink.textContent = 'Sair';
+                authLink.href = '#';
+                authLink.style.backgroundColor = '#ff4d4d';
+                authLink.addEventListener('click', function(event) {
+                    event.preventDefault();
+                    localStorage.removeItem('token');
+                    window.location.href = 'index.html';
+                });
+
+                const addArticleItem = document.createElement('li');
+                addArticleItem.classList.add('nav-item');
+                addArticleItem.innerHTML = `
+                    <a class="nav-link" href="artigos.html" style="padding-right: 26px; padding-left: 26px; border-radius: 8px; background-color: #28a745; border: 1px solid #28a745;">Adicionar artigo</a>
+                `;
+                navbar.appendChild(addArticleItem);
+            }
         });
     </script>
 </body>
