--- a/front/registro.html
+++ b/front/registro.html
@@ -31,7 +31,7 @@
                                 <a class="nav-link" href="#">Colaboradores</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="login.html" style="padding-right: 26px; padding-left: 26px; border-radius: 8px;background-color: #4177ff; border: 1px solid #4177ff;">Login</a>
+                                <a class="nav-link" id="authLink" href="login.html" style="padding-right: 26px; padding-left: 26px; border-radius: 8px;background-color: #4177ff; border: 1px solid #4177ff;">Login</a>
                             </li>
                         </ul>
                     </div>
@@ -83,9 +83,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <script>
-        // Evento de submit do formulário
         document.getElementById('cadastroForm').addEventListener('submit', function(event) {
-            event.preventDefault(); // Previne o envio padrão do formulário
+            event.preventDefault();
 
             const nome = document.getElementById('nome').value;
             const email = document.getElementById('email').value;
@@ -103,7 +102,7 @@
                     throw new Error('Erro ao fazer cadastro');
                 }
                 console.log(response, 'response')
-                return response; // Retorna o JSON que contém o token
+                return response;
             })
             .then(data => {
                     fetch('/login', {
@@ -117,13 +116,12 @@
                         if (!response.ok) {
                             throw new Error('Erro ao fazer login');
                         }
-                        return response.json(); // Retorna o JSON que contém o token
+                        return response.json();
                     })
                     .then(data => {
-                    
-                        // Armazena o token no localStorage
+                
                         localStorage.setItem('token', data.token);
-                        window.location.href = 'artigos.html'; // Redireciona para a página de artigos
+                        window.location.href = 'artigos.html';
                     })
                     .catch(error => {
                         alert('Erro: ' + error.message);
@@ -133,6 +131,32 @@
                 console.log(error)
                 alert('Erro: ' + error.message);
             });
+        });
+    </script>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const authLink = document.getElementById('authLink');
+            const navbar = document.querySelector('.navbar-nav');
+            const token = localStorage.getItem('token');
+
+            if (token) {
+                authLink.textContent = 'Sair';
+                authLink.href = '#';
+                authLink.style.backgroundColor = '#ff4d4d';
+                authLink.addEventListener('click', function(event) {
+                    event.preventDefault();
+                    localStorage.removeItem('token');
+                    window.location.href = 'index.html';
+                });
+
+                const addArticleItem = document.createElement('li');
+                addArticleItem.classList.add('nav-item');
+                addArticleItem.innerHTML = `
+                    <a class="nav-link" href="artigos.html" style="padding-right: 26px; padding-left: 26px; border-radius: 8px; background-color: #28a745; border: 1px solid #28a745;">Adicionar artigo</a>
+                `;
+                navbar.appendChild(addArticleItem);
+            }
         });
     </script>
 </body>
