--- a/front/quem-somos.html
+++ b/front/quem-somos.html
@@ -90,7 +90,7 @@
                 authLink.addEventListener('click', function(event) {
                     event.preventDefault();
                     localStorage.removeItem('token');
-                    window.location.href = 'inhdex.html';
+                    window.location.href = 'index.html';
                 });
 
                 const addArticleItem = document.createElement('li');
